AHO: Route guards added

--- a/projects/aho-requests/src/app/aho-requests/components/aho-requests/aho-requests.component.html
+++ b/projects/aho-requests/src/app/aho-requests/components/aho-requests/aho-requests.component.html
@@ -4,16 +4,16 @@
     <mat-sidenav mode="over">sidenav</mat-sidenav>
     <mat-sidenav-content>
 
-      <div class="container-fluid p-2 pr-xl-4 pl-xl-4">
+      <div class="container-fluid h-100 p-2 pr-xl-4 pl-xl-4">
         <!-- Start: Заголовок, поиск и фильтрация, меню пользователя -->
         <div class="row no-gutters app-header pt-2 pb-3 pt-md-4 pb-md-4">
 
           <!-- Start: Заголовок приложения -->
           <div class="header-title d-none d-md-flex col-auto justify-content-start align-items-center pr-0 pr-md-2 pr-xl-4">
-            <div class="header-title-label">
+            <a routerLink="/" class="header-title-label">
               <mat-icon class="title-icon" color="primary">build</mat-icon>
               <span class="title-label d-none d-xl-flex">Заявки АХО</span>
-            </div>
+            </a>
           </div>
           <!-- End: Заголовок приложения -->
 
