--- a/projects/aho-requests/src/app/aho-requests/components/aho-requests/aho-requests.component.less
+++ b/projects/aho-requests/src/app/aho-requests/components/aho-requests/aho-requests.component.less
@@ -13,6 +13,7 @@
       display: flex;
       flex-direction: row;
       height: 40px;
+      text-decoration: none;
       border: 2px solid #ffd740;
 
       .title-icon {
