--- a/projects/aho-requests/src/app/aho-requests/components/request-details/request-details.component.html
+++ b/projects/aho-requests/src/app/aho-requests/components/request-details/request-details.component.html
@@ -1,4 +1,4 @@
-<div class="row no-gutters d-none d-md-flex mt-3">
+<div class="row h-100 d-none d-md-flex mt-3" style="flex: 1;">
   <!--
   <div class="col-2">
 
@@ -6,6 +6,10 @@
     <div class="">от {{(selectedRequest$ | async)?.dateCreatedD | date:'dd.MM.yyyy, HH:mm'}}</div>
   </div>
   -->
-  <div class="col-3 request-type-image" [ngStyle]="{'background': 'url(' + (selectedRequest$ | async)?.type.imageUrl + ')'}"></div>
+  <div class="col-12 h-100">
+    <app-tabs></app-tabs>
+    <div class="col-10"></div>
+    <div class="col-2 h-100 request-type-image d-flex flex-column" [ngStyle]="{'background': 'url(' + (selectedRequest$ | async)?.type.imageUrl + ')'}"></div>
 
+  </div>
 </div>
