--- a/projects/aho-requests/src/styles.less
+++ b/projects/aho-requests/src/styles.less
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.css';
+@import './styles/reqiest-details-tabs';
+@import './styles/request-details-list';
 
 @application-background-color: #f5f5f5;
 
