--- a/projects/aho-requests/src/app/aho-requests/components/tabs/tabs.component.less
+++ b/projects/aho-requests/src/app/aho-requests/components/tabs/tabs.component.less
@@ -54,15 +54,17 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: @indicator-width;
+        min-width: @indicator-width;
         height: @indicator-height;
+        padding-left: 5px;
+        padding-right: 5px;
         margin-left: 10px;
         font-family: "Segoe UI";
         font-size: @indicator-font-size;
         color: @indicator-font-color;
         text-align: center;
         background: @indicator-background-color;
-        border-radius: 50%;
+        border-radius: 12px;
       }
     }
   }
