--- a/projects/aho-requests/src/app/aho-requests/components/aho-requests/aho-requests.component.less
+++ b/projects/aho-requests/src/app/aho-requests/components/aho-requests/aho-requests.component.less
@@ -1,5 +1,13 @@
 @app-header-height: 100px;
 
+.mat-progress-bar {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  z-index: 10;
+}
+
 .app-header {
   // height: @app-header-height;
 
